# hydra-flash

./: .gitignore  README.md  pyproject.toml  requirements.txt
hydra_flash/: train.py  utils.py
hydra_flash/conf/: config.yaml  config2.yaml  config_old.yaml
hydra_flash/conf/datamodule/: hymenoptera.yaml  hymenoptera_test.yaml  lyft.yaml  lyft_test.yaml  movie_posters.yaml  movie_posters_test.yaml
hydra_flash/conf/experiment/: hymenoptera.yaml  lyft.yaml  movie_poster.yaml
hydra_flash/conf/model/: gernet.yaml  resnet18.yaml  seg_mobilenet.yaml
hydra_flash/conf/preprocess/: download.yaml  hymenoptera.yaml  lyft.yaml  movie_poster.yaml
hydra_flash/conf/server/: local.yaml  mb.yaml
